--- a/style.css
+++ b/style.css
@@ -1,12 +1,48 @@
+@import url(https://fonts.google.com/share?selection.family=Fuzzy+Bubbles:wght@400;700);
 :root{
-     --cor-de-fundo: #lelele;
+     --cor-de-fundo: #F6CEEC; 
      --verde: #6fff57;
      --branco: #ffffff;
+     --botao-ativo: #BE81F7;
+     --botao-inativo: rgba(58,55,94,0.5); 
+     --texto-fundo: rgba(58,55,94,0.3); 
 
 }
 
  body{ 
       background-color: var(--cor-de-fundo);
       color: var(--branco);
-      font-family: 'Chakra Petch', sans-serif;
+      font-family: 'chakraPetch',sans-serif;
  }
+ .conteudo-principal { display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     max-width: 1200px;
+     width: 100%;
+     margin: 0 auto;
+}
+.titulo-principal {
+     text-align: left;
+     width: 100%;
+     font-size: 32px;
+}
+.titulo-principal samp {
+         color: var(--verde);
+         
+     }
+.botao {
+     background-color: var(--botao-inativo);
+     color: var(--branco);
+     display: flex;
+     justify-content: center;
+     padding: 1em;
+     font-size: 18px;
+     align-items: center;
+     width: 100%;
+
+     border-bottom: 4px solid var(--botao-ativo);
+     border-left: 2px solid var(--botao-ativo);
+     border-right: var(--botao-ativo);
+     border-top: none;
+}    
